chore: password hashing #1

--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "@ntegral/nestjs-sentry": "^3.0.7",
     "@sentry/node": "^6.19.7",
     "@sentry/types": "^6.19.7",
+    "@types/passport-strategy": "^0.2.35",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "commander": "^4.1.1",
