chore: auth and roles; WIP

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-ORIGIN=http://127.0.0.1:8300,http://127.0.0.1:8200
+ORIGIN=http://127.0.0.1:8300,http://auth.service.local
 PORT=8300
-
-# Auth config
-AUTH_SERVICE_URL=http://localhost:8500
 
 # Database config
 DB_HOST=127.0.0.1
