--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
     "gen:env-files": "node scripts/gen-envs.cjs",
+    "gen:key-pairs": "node scripts/gen-keys.cjs",
+    "re-gen:key-pairs": "node scripts/gen-keys.cjs replace",
     "gen:env-types": "npx gen-env-types .env.example -o src/env.d.ts -k -e .",
     "gen:docs": "npx compodoc -p tsconfig.doc.json --output public",
     "gen:db-diagram": "cross-env NODE_ENV=development ts-node ./node_modules/.bin/typeorm-uml src/__common/setup/config/uml-diagram.config.ts -d ../../../../docs/db-diagram.svg -f svg --with-enum-values",
@@ -62,6 +64,7 @@
     "dotenv": "^10.0.0",
     "eventemitter2": "^6.4.6",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "keycloak-connect": "^15.1.0",
     "ms": "^2.1.2",
     "nest-keycloak-connect": "^1.9.0",
