--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=debug nest start --debug --watch",
     "prestart:prod": "npm run migrations",
-    "start:prod": "cross-env NODE_ENV=production node --max-http-header-size=32768 dist/src/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=test jest",
     "test:ci": "cross-env NODE_ENV=test jest --ci --coverage --force-exit",
@@ -78,6 +78,7 @@
     "@types/cache-manager": "^4.0.4",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/js-yaml": "^4.0.8",
     "@types/ms": "^0.7.33",
     "@types/node": "^20.8.9",
     "@types/supertest": "^2.0.15",
