--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "@nestjs/common": "^10.2.7",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.7",
-    "@nestjs/jwt": "^10.1.1",
-    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/terminus": "^10.1.1",
@@ -60,8 +58,6 @@
     "ms": "^2.1.3",
     "mysql2": "^3.6.2",
     "node-cache": "^5.1.2",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
@@ -79,6 +75,7 @@
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/js-yaml": "^4.0.8",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/ms": "^0.7.33",
     "@types/node": "^20.8.9",
     "@types/supertest": "^2.0.15",
