fix: unit tests

--- a/.env.test
+++ b/.env.test
@@ -1,13 +1,15 @@
-ORIGIN=http://127.0.0.1:8300,http://127.0.0.1:8200
+ORIGIN=http://127.0.0.1:8300,http://auth.service.local
 PORT=8300
-
-# Auth config
-AUTH_SERVICE_URL=http://localhost:8100
+NAME=auth.service.local
 
 # Database config
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_USERNAME=dri-user
-DB_PASSWORD=dri-secret
-DB_DATABASE=dri
+DB_PORT=3306
+DB_USERNAME=user
+DB_PASSWORD=secret
+DB_DATABASE=auth
 
+SUPER_USER_PASSWORD=secret
+
+ACCESS_TOKEN_EXPIRES_IN=10m
+REFRESH_TOKEN_EXPIRES_IN=3d
