--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "husky": "^8.0.3"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.22",
@@ -79,6 +80,7 @@
     "@types/ms": "^0.7.33",
     "@types/node": "^20.8.9",
     "@types/supertest": "^2.0.15",
+    "@types/uuid": "^9.0.6",
     "@types/validator": "^13.11.5",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -88,7 +90,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "gen-env-types": "^1.3.4",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "js-yaml": "^4.1.0",
